Plot editting for R01 ; mostly changing font size

--- a/Cortes_ProjectR.Rmd
+++ b/Cortes_ProjectR.Rmd
@@ -29,7 +29,7 @@ library(reshape2)
 
 ### Purpose
 Publicly available mouse and human datasets of pre/post gene expression in skeletal muscle were used to project mouse patterns onto human data using ProjectR package. The end goal is to find latent variables in mouse gene expression to project onto human data to make mouse data better recapitulate human data.
-Built with R 'r getRversion()'  
+Built with R `r getRversion()`  
 Lab notebook: https://docs.google.com/document/d/1YcSzWmBNcq038HekdMqUrlnSpORaMbX597MM1hvmTdU/edit  
   
 **Overview**  
@@ -365,7 +365,7 @@ stripchart(pre_exercise_human, vertical = TRUE, method = "jitter", add = TRUE, p
 ```
  
 ggPlot Boxplot for Patterns in Human
-```{r Human_Patterns_ggPlot}
+```{r Human_Patterns_ggPlot, fig.align="center", echo = FALSE,fig.width = 7}
 human_sampleFactors <- AP_human@sampleFactors
 
 human_sampleFactors_long <- human_sampleFactors %>% as.data.frame() %>% rownames_to_column(., var = "Sample") %>% pivot_longer( cols = -Sample, names_to = "Patterns", values_to = "Factors")  %>% mutate(Exercise = ifelse(grepl("Pre", Sample, ignore.case = TRUE), "Pre", "Post")) %>% unite( col = "Exercise_Pattern", Patterns, Exercise, sep = "_", remove = FALSE)
@@ -376,13 +376,14 @@ human_NMF_boxplot <- ggplot(human_sampleFactors_long, aes(x = Exercise_Pattern, 
   geom_jitter(size = 2, alpha = 0.25, width = 0.2) +
   scale_colour_viridis_d() +
   labs(x = "NMF Patterns", y = "Sample Weights") + 
-  theme(panel.grid = element_blank(), axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1)) +
+  theme(panel.grid = element_blank(), axis.text.x = element_text(angle = 45, vjust = 1, hjust = 1, size = 16), axis.title = element_text(size = 16), title = element_text(size = 18), legend.text = element_text(size = 16)) +
+  theme(plot.margin = unit(c(1,1,1.5,1.2),"cm")) + #top, right, bottom, left
     labs(title = "NMF Patterns in Pre/Post Exercise Samples")
 human_NMF_boxplot
 ```
 
 ```{r eval=FALSE, include=FALSE}
-ggsave("/Users/eramsey/Desktop/R21_210302/PreliminaryR21/210629_human_NMF_prepost_pattern_boxplot.pdf", human_NMF_boxplot)
+ggsave("/Users/eramsey/Desktop/R21_210302/PreliminaryR21/210706_human_NMF_prepost_pattern_boxplot_bigfont.pdf", human_NMF_boxplot)
 
 ```
 
@@ -528,15 +529,12 @@ distfun=function(c) as.dist(1-cor(t(c))) ,
 cexCol=1,cexRow=.5,scale = "row",
 hclustfun=function(x) hclust(x, method="average"), main = "Top 20 Human NMF Avg Gene Weights"
 )
-# Error in plot.new() : figure margins too large
-
-#human_nmf_heatmap2 <-  
   
-png(file = "/Users/eramsey/Desktop/R21_210302/PreliminaryR21/210628_Human_NMF_Variance_GeneWeights.png")  
-heatmap.2(top20_var_human_featloadings_matrix,col=viridis, trace='none', margin=c(8,10),
-distfun=function(c) as.dist(1-cor(t(c))) ,
-cexCol=1.5,cexRow=1.4,scale = "row", xlab = "NMF Patterns",
-hclustfun=function(x) hclust(x, method="average"), main = "Most Variable Genes Across NMF Patterns"
+png(file = "/Users/eramsey/Desktop/R21_210302/PreliminaryR21/210706_Human_NMF_Variance_GeneWeights.png")  
+heatmap.2(top20_var_human_featloadings_matrix,col=viridis, trace='none', margin=c(11,11),
+distfun=function(c) as.dist(1-cor(t(c))) , xlab = "NMF Patterns", 
+srtCol = 45, cexCol=2,cexRow=1.7, scale = "row",
+hclustfun=function(x) hclust(x, method="average"), main = "Most Variable Genes Across NMF Patterns", cex.main = 6
 )
 dev.off()
 
@@ -549,7 +547,7 @@ ggsave(file = "210628_Human_NMF_Top20Variance_GeneWeights.pdf", human_nmf_heatma
 ```
 
 ```{r eval=FALSE, include=FALSE}
-ggsave("210621_NMF_human_featloadings_heatmap.pdf", human_featloadings_heatmap)
+ggsave("210706_NMF_human_featloadings_heatmap_bigfont.pdf", human_featloadings_heatmap)
 ```
 
 **NMF Projection, Mouse onto Human**  
@@ -696,13 +694,14 @@ dPCA <- data.frame(cbind(t(PCA_projectr[[1]]),PCA_projectr_df))
 projected_PCA <- ggplot(PCA_projectr_df, aes(x = PC1, y = PC2, colour = PrePost)) + 
   geom_point(size = 3.5) + 
   scale_color_viridis_d() +
-  theme(panel.grid = element_blank()) +
-  ggtitle("Mouse Principal Components Projected onto Human Data")
+  theme(panel.grid = element_blank(), axis.text = element_text(size = 16), axis.title = element_text(size = 16), title = element_text(size = 18), legend.text = element_text(size = 16)) +
+  ggtitle("Mouse Principal Components \nProjected onto Human Data")
 projected_PCA
+
 ```
 
 ```{r eval=FALSE, include=FALSE}
-ggsave("210629_PCA_Method_Mouse_Projected_onto_Human_new.pdf", projected_PCA)
+ggsave("210706_PCA_Method_Mouse_Projected_onto_Human_bigfonts.pdf", projected_PCA)
 ```
 
 
@@ -1060,6 +1059,9 @@ Human alluvial plot - Patterns 2, 5, and 9
 gost_pattern259_all <- rbind(gost_pattern2, gost_pattern5, gost_pattern9)
 #looking at just kegg results
 gost_pattern259 <- dplyr::filter(gost_pattern259, source == "KEGG")
+
+gost_pattern259_table <- apply(gost_pattern259, 2, as.character)
+write.csv2(gost_pattern259_table, file = "gost_human_results_patterns259.csv")
 ```
 
 ```{r fig.align="center", echo = FALSE,fig.width = 7}
@@ -1072,17 +1074,18 @@ ggalluvial_KEGG_259 <- ggplot(gost_pattern259,
   scale_x_discrete(limits = c("Pattern", "Pathway"), expand = c(.05, .05)) +
   scale_colour_viridis_d(option = "magma") +
   labs(y = NULL) +
-  theme(axis.text.x = element_text(size=10)) +
+  theme(axis.text.x = element_text(size=14), axis.text.y = element_blank(), axis.title = element_text(size = 16), title = element_text(size = 18), legend.text = element_text(size = 14)) +
   theme(panel.grid = element_blank()) +
+  theme(plot.margin = unit(c(1,.075,1,.5),"cm")) + #top, right, bottom, left
   guides(fill=guide_legend(title="KEGG Pathways"), col = guide_legend(nrow = 2)) + 
-  ggtitle("Pre/Post Exercise-Associated Pattern Pathways")
+  ggtitle("Pre/Post Exercise-Associated \nPattern Pathways")
 ggalluvial_KEGG_259
 
 ```
 
 
 ```{r}
-ggsave("210629_human_patterns_259_kegg_alluvialplot.pdf", ggalluvial_KEGG_259)
+ggsave("210706_human_patterns_259_kegg_alluvialplot_bigfont.pdf", ggalluvial_KEGG_259)
 ```
 
 Alluvial Plot - Mouse  
